[package]
name = "client"
version = "0.1.0"
authors = ["Fabian Vowie <crymaprivat@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.19"
fern = "0.6.0"
hook = { path = "../hook" }
bevy = { version = "0.2.1", default-features = false }
log = "0.4.11"
once_cell = "1.4.1"
winapi = "0.3"
winreg = "0.7.0"
