[package]
name = "hook"
version = "0.1.0"
authors = ["Fabian Vowie <crymaprivat@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp = "0.5"
detour = "0.7.1"
log = "0.4.11"
once_cell = "1.4.1"
winapi = { version = "0.3", features = ["libloaderapi", "memoryapi", "winbase", "timeapi"] }

[build-dependencies]
cpp_build = "0.5"
