[package]
name = "shared"
version = "0.1.0"
authors = ["Fabian Vowie <crymaprivat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.4.0", default-features = false }
bincode = "1.3"
log = "0.4.11"
serde = "1.0.117"